--- a/homework.html
+++ b/homework.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/starter.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="images/pigeon-favicon.jpg"/>
+    <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
    <title>Super Slick Company</title>
   </head>
   <body>
